// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`valuesByKeys() should fail 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should match regexp: /^test/",
      "path": "b",
    },
  ],
  "message": "Values should be valid",
  "path": "",
}
`;

exports[`valuesByKeys() should support custom message 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should match regexp: /^test/",
      "path": "b",
    },
  ],
  "message": "Custom message",
  "path": "",
}
`;
